test/message/esm_display_syntax_error_import.out
file:///*/test/message/esm_display_syntax_error_import.mjs:7
  notfound
  ^^^^^^^^
SyntaxError: The requested module '../fixtures/es-module-loaders/module-named-exports.mjs' does not provide an export named 'notfound'
    at ModuleLoader._instantiateModule (internal/modules/esm/module_loader.js:*:*)
    at ModuleLoader._instantiateAndEvaluate (internal/modules/esm/module_loader.js:*:*)
    at async ModuleLoader.importModule (internal/modules/esm/module_loader.js:*:*)
