test/message/esm_display_syntax_error_import.mjs
// Flags:  --module
/* eslint-disable no-unused-vars */
/* eslint-disable node-core/required-modules */
import '../common/index.mjs';
import {
  foo,
  notfound
} from '../fixtures/es-module-loaders/module-named-exports.mjs';
